--- a/packages/react-consumer/src/index.html
+++ b/packages/react-consumer/src/index.html
@@ -1,6 +1,10 @@
 <html>
+  <head>
+    <script defer="" type="module" src="main.mjs"></script>
+  </head>
   <body>
-    <div id="vue"></div>
+    <div id="header"></div>
     <div id="root"></div>
+    <div id="footer"></div>
   </body>
 </html>
